--- a/mine.css
+++ b/mine.css
@@ -69,12 +69,17 @@ header button {
     align-items: center;
 }
 
-.keyboard .letter {
+.keyboard .letters {
     flex: 0 0 calc(100% / 12);
     line-height: 3rem;
     height: 3rem;
     font-size: 2rem;
     font-weight: bold;
     border: 1px solid blue;
+    cursor: pointer;
 
+}
+
+.keyboard .keys {
+    background: rgb(15, 224, 207)
 }
